package service;

public class CalculadoraScore {

}
