package service;

public class HistoricoUsuarioRepository {

}
