package util;

public class GeradorAleatorio {

}
